Initial commit: 5G testbed with network slicing and FlexRIC
Features:
- Complete 5G SA core network (AMF, SMF, UPF, UDM, AUSF, NRF)
- 10 UEs distributed across 3 network slices (eMBB, URLLC, mMTC)
- FlexRIC Near-RT RIC with 8 service models (KPM, RC, SLICE, MAC, RLC, PDCP, TC, GTP)
- E2 agent integration for real-time RAN metrics
- Multi-slice performance analytics
- Production-ready configuration
- Full documentation and analysis scripts

Metrics Available:
- BLER (Block Error Rate) per UE and slice
- SNR (Signal-to-Noise Ratio)
- Throughput and latency statistics
- Per-slice KPI tracking

Status: ✅ Fully operational testbed

--- a/ue/docker-compose-ue.yaml
+++ b/ue/docker-compose-ue.yaml
@@ -13,8 +13,8 @@ services:
     environment:
       USE_ADDITIONAL_OPTIONS: -E --rfsim -r 106 --numerology 1 --uicc0.imsi 208990100001100 -C 3319680000 --rfsimulator.serveraddr 192.168.71.140 --log_config.global_log_options level,nocolor,time
     networks:
-      oai-net:
-        ipv4_address: 192.168.71.150
+      - oai-public-net
+      oai-traffic-net:
     devices:
        - /dev/net/tun:/dev/net/tun
     volumes:
@@ -27,6 +27,5 @@ services:
       retries: 5
 
 networks:
-  oai-net:
-    external: true
+  oai-public-net:
     name: oai-public-net
